--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 itertools = "0.10.5"
 combinations="0.1.0"
 once_cell = "1.12"
-regex = "1.5.4"
 clap = { version = "4.2.5", features = ["cargo", "derive"] }
 iai = { version = "0.1.1", features = ["iai_macro", "macro"] }
+regex = "1.10.2"
+num-integer = "0.1.45"
+geo = "0.27.0"
 
 [[bench]]
 name = "day00"
